# KnicksIQ

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  Dockerfile.api  Dockerfile.mcp  Dockerfile.web  Dockerfile.worker  MISSION.md  Makefile  NOTES.md  README.md  RESOURCES.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: analysis.py  archive.py  games.py  health.py  jobs.py  players.py  reports.py  router.py  security.py  teams.py
apps/api/app/core/: __init__.py  config.py  db.py  logging.py  seed_loader.py
apps/api/app/core/seed/: games.json  players.json  teams.json
apps/api/app/evaluation/: __init__.py  build_candidate_set.py  cli.py  harness.py  questions.jsonl
apps/api/app/models/: __init__.py  bad_stretch.py  base.py  box_score.py  chunk_model.py  dataset_release.py  document.py  game.py  game_event.py  generated_stat_fact.py  ingest_run.py  job.py  player.py  report.py  scoring_run.py  team.py
apps/api/app/schemas/: analytics.py  game.py  player.py  team.py
apps/api/app/services/: analytics_planner.py  archive_retrieval.py  conversation_state.py  embeddings.py  grounded_answer.py  llm_planner.py  pattern_facts.py  player_analytics.py  possession_chunks.py  qdrant_client.py  query_classifier.py  query_resolution.py  rag.py  rag_index.py  release_bundle.py  releases.py  report_generator.py  report_llm.py  reranker.py  retrieval_fusion.py  retrieval_planner.py  runtime_store.py  table_rag.py  table_rag_templates.py  team_aliases.py
apps/api/app/tests/: conftest.py  gold_queries.json  test_analysis.py  test_archive_retrieval.py  test_config.py  test_conversation_state.py  test_evaluation_dataset.py  test_evaluation_harness.py  test_games.py  test_gold_queries.py  test_grounded_answer.py  test_health.py  test_jobs.py  test_pattern_facts.py  test_player_intelligence.py  test_players.py  test_production_contract.py  test_query_resolution.py  test_rag_hybrid.py  test_rag_index.py  test_rag_quality.py  test_release_bundle.py  test_reports.py  test_reports_api.py  test_retrieval_fusion.py  test_retrieval_planner.py  test_runtime_store.py
apps/mcp/: pyproject.toml
apps/mcp/mcp_app/: __init__.py  logging_middleware.py  schemas.py  server.py  tools.py
apps/mcp/mcp_app/core/: __init__.py  config.py  db.py
apps/mcp/mcp_app/tests/: test_tools.py
apps/web/: .env.example  Dockerfile.web  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
apps/web/e2e/: archive.spec.ts
apps/web/public/: feedback.html  privacy.html  robots.txt  sitemap.xml  sources.html  terms.html
apps/web/public/.well-known/: security.txt
apps/web/src/: main.tsx  routeTree.gen.ts  vite-env.d.ts
apps/web/src/api/: index.ts
apps/web/src/assets/: logo.tsx
apps/web/src/components/layout/: app-sidebar.tsx  (+2 more)
apps/web/src/config/: fonts.ts
apps/web/src/context/: direction-provider.tsx  font-provider.tsx  layout-provider.tsx
apps/web/src/styles/: index.css  theme.css
apps/web/src/types/: index.ts
apps/web_legacy_before_shadcn_admin/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web_legacy_before_shadcn_admin/src/: App.tsx  main.tsx
apps/web_legacy_before_shadcn_admin/src/api/: client.ts  index.ts
apps/web_legacy_before_shadcn_admin/src/pages/: AnalystChat.tsx  GameDetail.tsx  Games.tsx  Home.tsx  PostgameReport.tsx  SavedReports.tsx
apps/worker/: pyproject.toml
apps/worker/worker_app/: __init__.py  cli.py  job_queue.py  main.py  release_cli.py  release_export.py
apps/worker/worker_app/adapters/: __init__.py  nba_api_source.py
apps/worker/worker_app/core/: __init__.py  config.py  db.py
apps/worker/worker_app/jobs/: __init__.py  detect_runs.py  ingest_game_detail.py  ingest_games.py  seed_players_from_nba_api.py
apps/worker/worker_app/tests/: test_cli.py  test_detect_runs.py  test_nba_api_source.py  test_release_export.py  test_worker_jobs.py
docs/: api.md  architecture.md  data-model.md  evaluation-web-candidates.md  evaluation.md  local-rag-index.md  mcp-tools.md  production-runbook.md  release-checklist.md  render-deploy.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
lessons/: 0001-schema-data-activation.html
load/: analyst-payload.json  archive.js
migrations/: env.py
migrations/fixtures/: pre_alembic_minimal.sql
migrations/versions/: 0001_release_archive.py  0002_release_game_identity.py  0003_generated_stat_facts.py  0004_archive_full_text.py  0005_player_analytics_views.py
rag-artifacts/: games_table.json
reference/: database-release-flow.html
(+20 files in other folders)
