[project]
name = "knicksiq-api"
version = "0.1.0"
description = "KnicksIQ FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "alembic>=1.13",
    "certifi>=2024.2.2",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "knicksiq-basketball-core",
]

[project.optional-dependencies]
test = [
    "httpx>=0.26",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
